# phyxel

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  INTERACTION_PIPELINE_STATUS.md  PATHING_SESSION.md  README.md  SITTING_STATUS.md  STATUS.md  TODO.md  build_and_test.bat  build_and_test.ps1  build_log.txt  build_out.txt  build_output.txt  build_shaders.bat  build_shaders.sh  character.anim  character2.anim  character_complete.anim  check_engine.ps1  debug_output.txt  enchanted_realms_def.json  imgui.ini  logging.ini  logsnippet.txt  notes  query_engine.ps1  requirements.txt  run_debug.bat  run_tests.bat  shader_build_log.txt  test_fast.ps1  test_intersection.py  tmp.txt  tmp_prompt.txt  wait_and_reset.ps1
editor/: CMakeLists.txt
editor/include/: Application.h  CameraPanel.h  MenuEditorPanel.h  ProjectLauncher.h  PropertiesPanel.h  TerminalPanel.h  TextureEditorPanel.h  WorldOutlinerPanel.h
editor/include/ai/: AISystem.h  StoryDirector.h
editor/include/examples/: MultiChunkDemo.h
editor/include/input/: InputController.h
editor/include/scene/: Enemy.h
editor/src/: Application.cpp  CameraPanel.cpp  MenuEditorPanel.cpp  ProjectLauncher.cpp  PropertiesPanel.cpp  TerminalPanel.cpp  TextureEditorPanel.cpp  WorldOutlinerPanel.cpp  main.cpp
editor/src/ai/: AISystem.cpp  StoryDirector.cpp
editor/src/input/: InputController.cpp
editor/src/scene/: Enemy.cpp
editor/src/scripting/: Bindings.cpp
engine/: CMakeLists.txt
engine/deprecated/active/: ActiveCharacter.cpp  ActiveCharacter.h  ActiveRagdoll.cpp  ActiveRagdoll.h  BalanceController.cpp  BalanceController.h  KinematicBody.cpp  KinematicBody.h  LimbIK.cpp  LimbIK.h  LocomotionController.cpp  LocomotionController.h
engine/deprecated/hybrid/: HybridCharacter.cpp  HybridCharacter.h
engine/include/ai/: AICharacterComponent.h  AICommandQueue.h  AIConversationService.h  AIEnhancer.h  ActionSystem.h  BTLoader.h  BehaviorTree.h  Blackboard.h  ContextManager.h  ConversationMemory.h  GooseBridge.h  LLMActionParser.h  LLMAgentBridge.h  LLMClient.h  NeedsSystem.h  PerceptionSystem.h  RelationshipManager.h  Schedule.h  SocialConsiderations.h  SocialInteraction.h  TTSService.h  UtilityAI.h  WorldView.h
engine/include/core/: APICommandQueue.h  AStarPathfinder.h  ActionEconomy.h  AssetManager.h  AtlasManager.h  AttackResolver.h  AttunementSystem.h  AudioSystem.h  CampaignJournal.h  CharacterAttributes.h  CharacterProgression.h  CharacterSheet.h  Chunk.h  ChunkInitializer.h  ChunkManager.h  ChunkStorage.h  ChunkStreamingManager.h  ChunkVoxelBreaker.h  ChunkVoxelManager.h  ChunkVoxelModificationSystem.h  ChunkVoxelQuerySystem.h  ClassDefinition.h  CombatAISystem.h  CombatSystem.h  ConditionSystem.h  Cube.h  CurrencySystem.h  DamageSystem.h  DamageTypes.h  DebrisSystem.h  DialogueSkillCheck.h  DiceSystem.h  DirtyChunkTracker.h  (+68 more)
examples/minimal_game/: CMakeLists.txt  MinimalGame.cpp  MinimalGame.h  main.cpp
game/: CMakeLists.txt
game/include/: Application.h
game/src/: Application.cpp  main.cpp
tests/: CMakeLists.txt  PlacementToolTest.cpp  README.md  test_anim_locomotion_speeds.py  test_asset_metrics_validator.py  test_character_metrics_validator.py  test_clip_selector.py  test_create_project.py  test_humanoid_anim_integrity.py  test_interaction_pipeline.py  test_ratification.py
tests/ai/: AIConversationServiceEnhancedTest.cpp  AIConversationServiceTest.cpp  AIEndToEndTest.cpp  BehaviorTreeTest.cpp  ContextManagerEnhancedTest.cpp  ContextManagerTest.cpp  ConversationMemoryTest.cpp  LLMActionParserTest.cpp  LLMAgentBridgeTest.cpp  LLMClientTest.cpp  NeedsSystemTest.cpp  RelationshipManagerTest.cpp  ScheduleTest.cpp  ScheduledBehaviorTest.cpp  SocialConsiderationsTest.cpp  SocialInteractionTest.cpp  WorldViewTest.cpp
tests/benchmark/: BenchmarkFixture.h  CMakeLists.txt  ChunkBenchmarks.cpp  PhysicsBenchmarks.cpp
tests/core/: AStarPathfinderTest.cpp  ActionEconomyTest.cpp  AssetManagerTest.cpp  AtlasManagerTest.cpp  AttackResolverTest.cpp  AttunementSystemTest.cpp  CampaignJournalTest.cpp  CharacterAttributesTest.cpp  CharacterProgressionTest.cpp  CharacterSheetTest.cpp  ChunkManagerTest.cpp  ChunkStreamingManagerTest.cpp  CombatSystemTest.cpp  ConditionSystemTest.cpp  CubeFacesTest.cpp  CubeTest.cpp  CurrencySystemTest.cpp  DayNightCycleTest.cpp  DebrisSystemTest.cpp  DialogueSkillCheckTest.cpp  DiceSystemTest.cpp  EcsRegistryTest.cpp  EncounterBuilderTest.cpp  EncumbranceSystemTest.cpp  EngineConfigTest.cpp  EngineRuntimeTest.cpp  EquipmentSystemTest.cpp  ForceSystemTest.cpp  GameCallbacksTest.cpp  GameDefinitionTest.cpp  GameScreenTest.cpp  GameSettingsTest.cpp  GridEncodingTest.cpp  HealthComponentTest.cpp  InitiativeTrackerTest.cpp  InstanceDataCreationTest.cpp  InventoryTest.cpp  ItemRegistryTest.cpp  JobSystemTest.cpp  KinematicAnimatorTest.cpp  (+27 more)
tests/e2e/: ApplicationE2ETests.cpp  CMakeLists.txt  E2ETestFixture.h  WorldInteractionE2ETests.cpp
tests/graphics/: CameraManagerTest.cpp  LightManagerTest.cpp
tests/integration/: CMakeLists.txt  ChunkManagerIntegrationTest.cpp  IntegrationTestFixture.cpp  IntegrationTestFixture.h  PhysicsIntegrationTest.cpp  README.md  SceneIntegrationTest.cpp  VulkanIntegrationTest.cpp
tests/mocks/: MockChunkManager.h
tests/physics/: CollisionSpatialGridTest.cpp
tests/scene/: CharacterAppearanceTest.cpp  CharacterSkeletonTest.cpp  NPCSystemTest.cpp  PhysicsDriveModeTest.cpp  ProceduralSkeletonTest.cpp  VoxelCharacterTest.cpp  VoxelRaycasterTest.cpp
tests/story/: CharacterAgentTest.cpp  CharacterMemoryTest.cpp  CharacterProfileTest.cpp  EventBusTest.cpp  KnowledgePropagatorTest.cpp  LLMCharacterAgentTest.cpp  RuleBasedCharacterAgentTest.cpp  StoryDirectorTest.cpp  StoryDirectorTypesTest.cpp  StoryDrivenBehaviorTest.cpp  StoryEngineTest.cpp  StoryTypesTest.cpp  StoryWorldLoaderTest.cpp
tests/stress/: CMakeLists.txt  ChunkStressTests.cpp  PhysicsStressTests.cpp  StressTestFixture.h
tests/ui/: DialogueSystemTest.cpp  InputManagerTest.cpp  UIWidgetTest.cpp  WindowManagerTest.cpp
tests/utils/: CoordinateUtilsTest.cpp  FrustumTest.cpp  MathTest.cpp
(+1026 files in other folders)
